Enhance audit scripts with probe failure handling: implement soft probe functions for improved error reporting and summary generation; add tests for probe diff formatting and message redaction to ensure accuracy in output.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,9 @@ jobs:
             echo "full not available on this OS; skipping run smoke."
           fi
 
+      - name: Probe diff formatting test
+        run: python3 tests/test_probe_diff.py
+
   mac-smoke:
     runs-on: macos-latest
     steps:
